must-gather.local.5022534670626055853/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-4f65e564ad1ba0b86c140668c833c753dae7bd2def50c6e88c4afb7e45148870/namespaces/istio-system/networking.istio.io/gateways/istio-autogenerated-k8s-ingress.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1alpha3","kind":"Gateway","metadata":{"annotations":{"maistra.io/mesh-generation":"2.3.2-1-5"},"labels":{"app":"istio-ingressgateway","app.kubernetes.io/component":"istio-ingress","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"istio-ingress","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.3.2-1-5","maistra-version":"2.3.2","maistra.io/owner":"istio-system"," [...]
    maistra.io/mesh-generation: 2.3.2-1-5
  creationTimestamp: "2023-03-24T17:28:23Z"
  generation: 1
  labels:
    app: istio-ingressgateway
    app.kubernetes.io/component: istio-ingress
    app.kubernetes.io/instance: istio-system
    app.kubernetes.io/managed-by: maistra-istio-operator
    app.kubernetes.io/name: istio-ingress
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 2.3.2-1-5
    maistra-version: 2.3.2
    maistra.io/owner: istio-system
    maistra.io/owner-name: basic
    release: istio
  name: istio-autogenerated-k8s-ingress
  namespace: istio-system
  ownerReferences:
  - apiVersion: maistra.io/v2
    blockOwnerDeletion: true
    controller: true
    kind: ServiceMeshControlPlane
    name: basic
    uid: ea62ab37-de81-47cf-a7a3-ecf2986a0b2f
  resourceVersion: "886089"
  uid: 719336dd-e7e8-4fda-aa58-0cbf18b4646e
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http2
      number: 80
      protocol: HTTP2
status:
  conditions:
  - lastProbeTime: "2023-03-24T18:24:34.748589070Z"
    lastTransitionTime: "2023-03-24T18:24:34.748589319Z"
    message: 36/36 proxies up to date.
    status: "True"
    type: Reconciled
  observedGeneration: "1"
  validationMessages:
  - documentationUrl: https://istio.io/v1.14/docs/reference/config/analysis/ist0145/
    level: ERROR
    type:
      code: IST0145
